--- a/NES_DragonBoard_V10/NES_DragonBoard.qsf
+++ b/NES_DragonBoard_V10/NES_DragonBoard.qsf
@@ -206,15 +206,11 @@ set_global_assignment -name VERILOG_FILE PPU_gen2.v
 set_global_assignment -name VERILOG_FILE nes_top.v
 set_global_assignment -name VERILOG_FILE cpu/sprdma.v
 set_global_assignment -name VERILOG_FILE cpu/rp2a03.v
-set_global_assignment -name VERILOG_FILE cpu/jp.v
 set_global_assignment -name VERILOG_FILE cpu/cpu.v
 set_global_assignment -name VERILOG_FILE cpu/apu/apu_triangle.v
-set_global_assignment -name VERILOG_FILE cpu/apu/apu_pulse.v
 set_global_assignment -name VERILOG_FILE cpu/apu/apu_noise.v
 set_global_assignment -name VERILOG_FILE cpu/apu/apu_mixer.v
 set_global_assignment -name VERILOG_FILE cpu/apu/apu_length_counter.v
-set_global_assignment -name VERILOG_FILE cpu/apu/apu_frame_counter.v
-set_global_assignment -name VERILOG_FILE cpu/apu/apu_envelope_generator.v
 set_global_assignment -name VERILOG_FILE cpu/apu/apu_div.v
 set_global_assignment -name VERILOG_FILE cpu/apu/apu.v
 set_global_assignment -name VERILOG_FILE cart/cart_03.v
@@ -225,10 +221,14 @@ set_global_assignment -name QIP_FILE wram.qip
 set_global_assignment -name QIP_FILE PRG_16_ROM.qip
 set_global_assignment -name QIP_FILE CHR_8_ROM.qip
 set_global_assignment -name QIP_FILE PLL0.qip
-set_global_assignment -name QIP_FILE PRG_32_ROM.qip
 set_global_assignment -name SYSTEMVERILOG_FILE I2C_phy.sv
 set_global_assignment -name QIP_FILE CHR_RAM.qip
 set_global_assignment -name SYSTEMVERILOG_FILE testbench.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME Testbench_sdram -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id Testbench_sdram
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "1 us" -section_id Testbench_sdram
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Testbench_sdram -section_id Testbench_sdram
+set_global_assignment -name SYSTEMVERILOG_FILE joypad.sv
 set_global_assignment -name EDA_TEST_BENCH_FILE cart/cart.v -section_id Testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE cpu/apu/apu.v -section_id Testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE cpu/apu/apu_div.v -section_id Testbench
@@ -259,10 +259,6 @@ set_global_assignment -name EDA_TEST_BENCH_FILE vram.qip -section_id Testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE vram.v -section_id Testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE wram.qip -section_id Testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE wram.v -section_id Testbench
-set_global_assignment -name EDA_TEST_BENCH_NAME Testbench_sdram -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id Testbench_sdram
-set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "1 us" -section_id Testbench_sdram
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Testbench_sdram -section_id Testbench_sdram
 set_global_assignment -name EDA_TEST_BENCH_FILE cart/cart_02.v -section_id Testbench_sdram
 set_global_assignment -name EDA_TEST_BENCH_FILE cpu/apu/apu.v -section_id Testbench_sdram
 set_global_assignment -name EDA_TEST_BENCH_FILE cpu/apu/apu_div.v -section_id Testbench_sdram
@@ -293,4 +289,14 @@ set_global_assignment -name EDA_TEST_BENCH_FILE vram.qip -section_id Testbench_s
 set_global_assignment -name EDA_TEST_BENCH_FILE vram.v -section_id Testbench_sdram
 set_global_assignment -name EDA_TEST_BENCH_FILE wram.qip -section_id Testbench_sdram
 set_global_assignment -name EDA_TEST_BENCH_FILE wram.v -section_id Testbench_sdram
+set_global_assignment -name SYSTEMVERILOG_FILE apu_frame_counter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE apu_envelope_generator.sv
+set_global_assignment -name SYSTEMVERILOG_FILE apu_pulse.sv
+set_global_assignment -name SYSTEMVERILOG_FILE apu_mixer.sv
+set_global_assignment -name QIP_FILE multiplier.qip
+set_global_assignment -name SYSTEMVERILOG_FILE apu_length_counter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE apu_noise.sv
+set_global_assignment -name SYSTEMVERILOG_FILE apu_triangle.sv
+set_global_assignment -name SYSTEMVERILOG_FILE rp2a03_dma.sv
+set_global_assignment -name SYSTEMVERILOG_FILE apu.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
