--- a/NES_DragonBoard_V10/NES_DragonBoard.qsf
+++ b/NES_DragonBoard_V10/NES_DragonBoard.qsf
@@ -197,38 +197,10 @@ set_location_assignment PIN_43 -to sdram_dq[0]
 set_location_assignment PIN_54 -to sdram_dqm
 set_location_assignment PIN_71 -to sdram_ras_n
 set_location_assignment PIN_69 -to sdram_wre_n
-set_global_assignment -name SYSTEMVERILOG_FILE sdr.sv
-set_global_assignment -name SYSTEMVERILOG_FILE eeprom.sv
-set_global_assignment -name SYSTEMVERILOG_FILE SDRAM_SP8_I.sv
-set_global_assignment -name SDC_FILE SDC1.sdc
-set_global_assignment -name VERILOG_FILE testbench.v
-set_global_assignment -name VERILOG_FILE PPU_gen2.v
-set_global_assignment -name VERILOG_FILE nes_top.v
-set_global_assignment -name VERILOG_FILE cpu/sprdma.v
-set_global_assignment -name VERILOG_FILE cpu/rp2a03.v
-set_global_assignment -name VERILOG_FILE cpu/cpu.v
-set_global_assignment -name VERILOG_FILE cpu/apu/apu_triangle.v
-set_global_assignment -name VERILOG_FILE cpu/apu/apu_noise.v
-set_global_assignment -name VERILOG_FILE cpu/apu/apu_mixer.v
-set_global_assignment -name VERILOG_FILE cpu/apu/apu_length_counter.v
-set_global_assignment -name VERILOG_FILE cpu/apu/apu_div.v
-set_global_assignment -name VERILOG_FILE cpu/apu/apu.v
-set_global_assignment -name VERILOG_FILE cart/cart_03.v
-set_global_assignment -name VERILOG_FILE cart/cart_02.v
-set_global_assignment -name VERILOG_FILE cart/cart.v
-set_global_assignment -name QIP_FILE vram.qip
-set_global_assignment -name QIP_FILE wram.qip
-set_global_assignment -name QIP_FILE PRG_16_ROM.qip
-set_global_assignment -name QIP_FILE CHR_8_ROM.qip
-set_global_assignment -name QIP_FILE PLL0.qip
-set_global_assignment -name SYSTEMVERILOG_FILE I2C_phy.sv
-set_global_assignment -name QIP_FILE CHR_RAM.qip
-set_global_assignment -name SYSTEMVERILOG_FILE testbench.sv
 set_global_assignment -name EDA_TEST_BENCH_NAME Testbench_sdram -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id Testbench_sdram
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "1 us" -section_id Testbench_sdram
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Testbench_sdram -section_id Testbench_sdram
-set_global_assignment -name SYSTEMVERILOG_FILE joypad.sv
 set_global_assignment -name EDA_TEST_BENCH_FILE cart/cart.v -section_id Testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE cpu/apu/apu.v -section_id Testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE cpu/apu/apu_div.v -section_id Testbench
@@ -289,14 +261,42 @@ set_global_assignment -name EDA_TEST_BENCH_FILE vram.qip -section_id Testbench_s
 set_global_assignment -name EDA_TEST_BENCH_FILE vram.v -section_id Testbench_sdram
 set_global_assignment -name EDA_TEST_BENCH_FILE wram.qip -section_id Testbench_sdram
 set_global_assignment -name EDA_TEST_BENCH_FILE wram.v -section_id Testbench_sdram
-set_global_assignment -name SYSTEMVERILOG_FILE apu_frame_counter.sv
-set_global_assignment -name SYSTEMVERILOG_FILE apu_envelope_generator.sv
-set_global_assignment -name SYSTEMVERILOG_FILE apu_pulse.sv
-set_global_assignment -name SYSTEMVERILOG_FILE apu_mixer.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu/apu/apu_triangle.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu/apu/apu_pulse_test.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu/apu/apu_pulse.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu/apu/apu_noise.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu/apu/apu_mixer.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu/apu/apu_length_counter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu/apu/apu_frame_counter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu/apu/apu_envelope_generator.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu/apu/apu_dmc.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu/apu/apu.sv
+set_global_assignment -name VHDL_FILE t65/T65_Pack.vhd
+set_global_assignment -name VHDL_FILE t65/T65_MCode.vhd
+set_global_assignment -name VHDL_FILE t65/T65_ALU.vhd
+set_global_assignment -name VHDL_FILE t65/T65.vhd
+set_global_assignment -name SYSTEMVERILOG_FILE sdr.sv
+set_global_assignment -name SYSTEMVERILOG_FILE eeprom.sv
+set_global_assignment -name SYSTEMVERILOG_FILE SDRAM_SP8_I.sv
+set_global_assignment -name SDC_FILE SDC1.sdc
+set_global_assignment -name VERILOG_FILE testbench.v
+set_global_assignment -name VERILOG_FILE PPU_gen2.v
+set_global_assignment -name VERILOG_FILE nes_top.v
+set_global_assignment -name VERILOG_FILE cpu/rp2a03.v
+set_global_assignment -name VERILOG_FILE cart/cart_03.v
+set_global_assignment -name VERILOG_FILE cart/cart_02.v
+set_global_assignment -name VERILOG_FILE cart/cart.v
+set_global_assignment -name QIP_FILE vram.qip
+set_global_assignment -name QIP_FILE wram.qip
+set_global_assignment -name QIP_FILE PRG_16_ROM.qip
+set_global_assignment -name QIP_FILE CHR_8_ROM.qip
+set_global_assignment -name QIP_FILE PLL0.qip
+set_global_assignment -name SYSTEMVERILOG_FILE I2C_phy.sv
+set_global_assignment -name QIP_FILE CHR_RAM.qip
+set_global_assignment -name SYSTEMVERILOG_FILE testbench.sv
+set_global_assignment -name SYSTEMVERILOG_FILE joypad.sv
 set_global_assignment -name QIP_FILE multiplier.qip
-set_global_assignment -name SYSTEMVERILOG_FILE apu_length_counter.sv
-set_global_assignment -name SYSTEMVERILOG_FILE apu_noise.sv
-set_global_assignment -name SYSTEMVERILOG_FILE apu_triangle.sv
 set_global_assignment -name SYSTEMVERILOG_FILE rp2a03_dma.sv
-set_global_assignment -name SYSTEMVERILOG_FILE apu.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cart/cart_71.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cart/cart_00.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
