--- a/NES_DragonBoard_V12/NES_DragonBoard.qsf
+++ b/NES_DragonBoard_V12/NES_DragonBoard.qsf
@@ -301,4 +301,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE cart/cart_00.sv
 set_global_assignment -name SYSTEMVERILOG_FILE SDRAM_DP8_I.sv
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_global_assignment -name NUM_PARALLEL_PROCESSORS 16
+set_global_assignment -name VERILOG_FILE cart/chr_rom_window.v
+set_global_assignment -name QIP_FILE chr_window_ram.qip
+set_global_assignment -name SYSTEMVERILOG_FILE button_debounce.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
